# autonomus_vehicle

./: LICENSE  README.md  frames.gv
docker/: Dockerfile  docker-compose.yml
src/depends/: install_deps.sh
src/example/: CMakeLists.txt  package.xml
src/example/config/: Competition_track_graph.graphml  saved.rviz
src/example/graphml/: Competition_track_graph.graphml  fixed.graphml  fixed2.graphml  gercek.graphml  gercek2.graphml
src/example/include/mekatronom/: MpcNode.hpp
src/example/include/mekatronom/utilities/: djikstra.h  mpc_running.h  mpc_start_setting.h  traffic_sign_manager.h
src/example/launch/: bosch.launch
src/example/lib/mpc/: mpc_start_setting2.cpp
src/example/lib/mpc/include/mpc/: mpc_start_setting2.h
src/example/msg/: MekatronomYolo.msg  carcontrol.msg
src/example/scripts/: MpcNode.cpp  mpc_node.cpp
src/example/src/: camera.py  control.py  mpc.py  pathfinding.py  pointcloudrobotaksi.py  real_camera.py  realmpc.py  tensorrtyolo.py  tfpublisher.py  yolo.py  yolo_intersection.py  yolo_intersection_real.py
src/models_pkg/cam_birdeye_REC/: model.sdf
src/models_pkg/camera/: model.sdf
src/models_pkg/camera_follow/: model.sdf
src/models_pkg/car_body/: model.sdf
src/models_pkg/chassis/: model.sdf
src/models_pkg/lidar/: lidar.urdf  lidar.xacro  model.config  model.sdf
src/models_pkg/rcCar_assembly/: model.sdf  model.urdf  test.urdf
src/models_pkg/rcCar_assembly_REC/: model.sdf
src/models_pkg/track/: model.sdf
src/models_pkg/track/materials/scripts/: bfmc_track.material
src/obstacle_detector/: README.md  package.xml
src/obstacle_detector/include/obstacle_detector/: obstacle_tracker.h
src/obstacle_detector/include/obstacle_detector/displays/: circle_visual.h  segment_visual.h
src/obstacle_detector/include/obstacle_detector/utilities/: point.h  tracked_circle_obstacle.h  tracked_obstacle.h  tracked_segment_obstacle.h
src/obstacle_detector/launch/: nodes.launch
src/obstacle_detector/msg/: CircleObstacle.msg  SegmentObstacle.msg
src/obstacle_detector/src/: obstacle_extractor.cpp  obstacle_tracker.cpp  scans_merger.cpp
src/obstacle_detector/src/displays/: circle_visual.cpp  obstacles_display.cpp  segment_visual.cpp
src/plugins_pkgs/bno055_plugin/: CMakeLists.txt
src/plugins_pkgs/bno055_plugin/src/: bno055_plugin.cpp
src/plugins_pkgs/car_plugin/src/: carlikerobot_ros_plugin.cpp
src/plugins_pkgs/gps_plugin/: CMakeLists.txt
src/plugins_pkgs/gps_plugin/src/: gps_plugin.cpp
src/sim_pkg/config/: ekf_localization.yaml
src/sim_pkg/launch/: map_with_all_objects.launch  map_with_all_objects_REC.launch  map_with_car.launch  map_with_car_REC.launch
src/sim_pkg/launch/bash_scripts/: launch_obstacle_detector.sh  rviz.sh  rviz_config.rviz
src/sim_pkg/launch/sublaunchers/: car.launch  pedestrian_objects.launch  traffic_lights.launch
src/sim_pkg/worlds/: world.world  world_with_baha.world
src/traffic_light_pkg/src/: tl_talker.py
src/zed-ros-examples/tutorials/zed_depth_sub_tutorial/src/: zed_depth_sub_tutorial.cpp
src/zed-ros-wrapper/zed_wrapper/params/: common.yaml  zed2i.yaml
