<?xml version="1.0"?>
<package format="2">
  <name>example</name>
  <version>1.0.0</version>
  <description>The example package</description>
  <maintainer email="rares.lemnariu@ro.bosch.com">Rares Lemnariu</maintainer>
  <maintainer email="baha.dursun@gmail.com">Baha Dursun</maintainer>
  <license>Bosch ECC</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Add sensor_msgs as a build, build export, and exec dependency -->
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Include other dependencies as previously listed -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>utils</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>utils</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>utils</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Test dependencies -->
  <test_depend>roscpp</test_depend>
  <test_depend>rostest</test_depend>

  <exec_depend>zed_wrapper</exec_depend>

</package>
